--- a/barbershop/src/main/resources/content_ru.properties
+++ b/barbershop/src/main/resources/content_ru.properties
@@ -53,7 +53,7 @@ signup.login=Логин
 signup.password=Пароль
 signup.password_repeated=Повторите пароль
 signup.role=Выберите роль
-signup.role.client=Студент
+signup.role.client=Клиент
 signup.role.admin=Администратор
 signup.email=Email
 signup.phone =Моб. телефон
@@ -162,7 +162,7 @@ about_us.1.content=Парикмахеры имеют большой опыт в 
 about_us.2.header=Независимо от того, сколько вам лет
 about_us.2.content=Приветствуем как детей так и пожилых людей, не оставим никого в стороне.
 about_us.3.header=Акция
-about_us.3.content=Каждый восьмой поход в наш барбершоп,дает вам скидку на услугу в рамзере 100%!
+about_us.3.content=Каждый восьмой поход в наш барбершоп,дает вам скидку на услугу в размере 100%!
 error.subscription_not_available=Выбранная подписка недоступна
 subscription.date=Дата
 error.teacher_has_lessons=Для деактивации преподавателя, отмените его занятия
@@ -233,3 +233,14 @@ service.caption=Наши услуги
 barber.tiktok=Тикток
 barber.phone=Моб. телефон
 barber.age=лет
+order.service=Выберите услугу
+order.barber=Выберите барбера
+order.barber.option=Выберите...
+order.time=Choose time
+order.data=Choose data
+order.button=Submit order
+order.waiting=Заявка отправлена на рассмотрение.Посмотреть статус заявки можно в профиле,если заявка будет отклонена с вами свяжется администратор по емайл.
+order.do=Сделать заказ
+order.list =История ваших заказов
+client.data=Ваши персональные данные
+profile.menu=Меню
