--- a/barbershop/src/main/resources/content_en.properties
+++ b/barbershop/src/main/resources/content_en.properties
@@ -1,15 +1,7 @@
 company.name=Magnifique
-page.name.home=Home
 page.name.error=Error
-page.name.info=Info
 page.name.login=Login
 page.name.signup=Registration
-page.name.email=Email
-page.name.courses=Courses
-page.name.course=Course
-page.name.teachers=Teachers
-page.name.teacher=Teacher
-page.name.choose_lesson=Choose lesson
 header.home=Home
 header.services=Services
 header.barbers=Our barbers
@@ -75,87 +67,7 @@ send_again_page.btn=Send
 info.email_confirmed=Email confirmed successfully
 info.email_sent=We sent you a confirmation link
 error.invalid_login=Invalid login
-courses.not_found=No courses found
-courses.go_to_first_page=Go to first page
-courses.search.placeholder=Enter course name
-courses.search.btn=Search
-courses.learn_more=See more
-course_page.per_hour=Hour
-course_page.enroll=Enroll
-teachers.search.btn=Search
-teachers.search.placeholder=Enter teacher name
-teachers.see_more=See more
-teachers.not_found=No teachers found
-teachers.go_to_first_page=Go to first page
-teachers.no_description_provided=Description not provided
-teacher.work_experience=Work experience (years)
-teacher_init.main=Provide information to complete sign up
-teacher_init.label.description=Enter self-description
-teacher_init.label.experience=Enter your work experience in years
-teacher_init.label.image=Upload  your profile image (jpg or jpeg)
-teacher_init.btn=Submit
-error.image_type=The image must be of jpg or jpeg type
-teacher.tabs.lesson_schedule=Lesson schedule
-teacher.tabs.teacher_schedule=Teacher schedule
-teacher.tabs.personal_info=Personal information
-teacher.lesson_schedule.student_name=Student name
-teacher.lesson_schedule.student_surname=Student surname
-teacher.lesson_schedule.course_name=Course name
-teacher.lesson_schedule.start_time=Start time
-teacher.lesson_schedule.duration=Duration (hours)
-teacher.lesson_schedule.not_found=No lessons found
-teacher.lesson_schedule.status=Status
-teacher.lesson_schedule.status.NORMAL=Planned
-teacher.lesson_schedule.status.CANCELLED=Cancelled
-teacher.schedule.main=My schedule
-teacher.schedule.day=Day of week
-teacher.schedule.start_time=Start time
-teacher.schedule.end_time=End time
-teacher.schedule.not_found=No work days found
-teacher.schedule.alter=Alter schedule
-teacher.schedule.remove=Remove schedule for this day
-teacher.schedule.hours=(hours)
-teacher.schedule.btn=Alter
-day_of_week.1=Monday
-day_of_week.2=Tuesday
-day_of_week.3=Wednesday
-day_of_week.4=Thursday
-day_of_week.5=Friday
-day_of_week.6=Saturday
-day_of_week.7=Sunday
-teacher.personal_info.main=Change personal data
-error.invalid_time=Specify valid time period
 info.already_subscribed=You already have a subscription to this course
-lesson.not_available=No free time. Please contact the administrator
-lesson.choose_date=Choose date and time
-teacher.schedule.teacher_name=Teacher name
-teacher.schedule.teacher_surname=Teacher surname
-lesson.available_slots=Available slots
-student.tabs.lesson_schedule=Lesson schedule
-student.tabs.personal_subscriptions=Personal subscription
-student.subscriptions.no_found=No subscriptions found
-subscription.start_date=Start date
-subscription.end_date=End date
-subscription.lesson_amount=Lesson amount
-subscription.status=Status
-subscription.rejected.message=Subscription request is rejected
-subscription.waiting.message=Subscription request is not approved yet
-subscription.add_lesson=Add lesson
-subscription.select_lessons=Select lessons
-subscription.status.WAITING_FOR_APPROVE=Waiting for approvement
-subscription.status.REJECTED=Rejected
-subscription.status.APPROVED=Approved
-subscription.status.ACTIVATED=Active
-lesson.cancel=Cancel
-subscription.not_found_later=No available subscriptions found. Please try again later
-subscription.go_to_courses=Go to courses page
-page.name.subscription=Subscriptions
-subscription.select=Select
-course.login_message.register=Log in to register for the course
-course.login_message.comment=Log in to leave a comment
-course.comments=Comments
-course.post_comment=Post comment
-course.no_comments_yet=No comments yet
 about_us.main=About us
 about_us.message=Our advantages
 about_us.1.header=Professional Barbers
@@ -164,66 +76,19 @@ about_us.2.header=At any age for client
 about_us.2.content=We welcome both children and the elderly, we will not leave anyone aside.
 about_us.3.header=Share
 about_us.3.content=Every 8 trip to our barbershop gives you a 100% discount on the service.
-error.subscription_not_available=Selected subscription is not available
-subscription.date=Date
 error.teacher_has_lessons=To deactivate a teacher, cancel their lessons
 error.teacher_has_courses=To deactivate a teacher, remove teacher from courses
-error.student_has_subscriptions=To deactivate a student, cancel their subscriptions
-page.name.add_course=Add course
-course.add_course.main=Add new course
-course.label.name=Enter course name
-course.label.description=Enter course description
-course.label.price=Enter course price per hour
-course.label.image=Upload course image
-course.not_found=No courses found
-admin.tabs.lessons=Lessons
-admin.tabs.subscriptions=Subscriptions
-admin.tabs.users=Users
-admin.tabs.courses=Courses
-course.all.main=All courses
-course.name=Course name
-course.change_status=Change status
-course.change=Edit course
-course.manage_teachers=Manage teachers for course
-course.activate=Activate
-course.deactivate=Deactivate
-course.edit=Edit
-course.manage=Manage
-subscription.approve=Approve subscription
-subscription.all_available=All available slot count
-subscription.for_sure_available=For sure available slot count
-subscription.approve.btn=Approve
-submit=Submit
-course.go_to_page=Go to courses page
-course.add_to_course=Add to course
-course.remove=Remove
-teacher.name=Teacher name
-teacher.surname=Teacher surname
 add=Add
 user.login=Login
 user.name=Name
 user.surname=Surname
 user.email=Email
-user.role=Role
-user.role.ADMIN=Administrator
-user.role.TEACHER=Teacher
-user.role.STUDENT=Student
-user.status=Status
-user.status.WAITING_FOR_APPROVEMENT=Waiting for approvement
-user.status.ACTIVE=Active
-user.status.INACTIVE=Inactive
-user.status.EMAIL_NOT_CONFIRMED=Email not confirmed
-user.activate=Activate
-user.deactivate=Deactivate
-user.change_status=Change status
-course.add=Add course
+user.birthday=Birthday
 comment.comments=Comments
 comment.remove_comment=Remove
 comment.content=Content
 comment.not_found=No comments found
 error.cant_deactivate_yourself=You can't deactivate yourself
-subscription.request=Subscription requests
-subscription.subscriptions=Subscriptions
 service.th.name=Service
 service.th.time=Duration
 service.th.price=Price
@@ -234,3 +99,48 @@ service.caption=Our services
 barber.tiktok=TikTok
 barber.phone=Mob. phone
 barber.age=years old
+order.service=Choose service
+order.barber=Choose barber
+order.barber.option=Choose...
+order.time=Choose time
+order.data=Choose data
+order.button=Submit order
+order.waiting=The application has been sent for consideration. You can see the status of the application in the profile, if the application is rejected, the administrator will contact you by email.
+order.error.date=Is not correct selected date!
+order.do=Make an order
+order.list=History of your orders
+client.data=Your personal data
+profile.menu=Menu
+client.edit_profile=Edit profile
+client.order.status=Status
+client.order.data_time=The application was send on
+client.order.data_time_plane=Plane data and time
+client.order.service=Type of service
+client.order.barber=Barber
+client.orders.caption=History of orders
+client.no_orders=We are glad to see you on our website, try to make your first order!
+admin.no_orders=This client has no an order
+client.profile=Profile
+client.edit.order=Edit order
+client.remove.order=Remove order
+client.remove.td=Remove
+client.edit.td=Edit
+client.edit.link.email=You can
+admin.data=Your personal data
+admin.client.list=List of clients
+client.fio=Surname Name Patronymic
+admin.remove.client=Remove the client
+client.view.orders=View client orders
+view.orders=View orders
+admin.list.caption=All clients
+order.status.approve=Approve
+order.status.reject=Reject
+client.status.change=Change status
+client.status.block=Block
+client.status.unblock=Unblock
+client.status=Status
+
+
+
+
+
