--- a/barbershop/src/main/resources/content_en.properties
+++ b/barbershop/src/main/resources/content_en.properties
@@ -54,7 +54,7 @@ signup.surname=Surname
 signup.patronymic=Patronymic
 signup.birthday=Date of birth
 signup.button=Sign Up
-signup.hint.phone=Phone must consist of 7 numbers, with code 375
+signup.hint.phone=Phone must consist of 9 numbers, with first code 375
 signup.hint.login=Login must consist of latin characters from 4 to 20
 signup.hint.password=Password must consist of numbers and / or latin characters (from 8 to 20)
 signup.hint.name=Format: first capital letter, must consist of latin or cyrillic characters (from 1 to 21)
@@ -72,7 +72,7 @@ about_us.main=About us
 about_us.message=Our advantages
 about_us.1.header=Professional Barbers
 about_us.1.content=Barbers are very experienced in their field, and are always ready to take something new, as they are not afraid to learn from others.
-about_us.2.header=At any age for client
+about_us.2.header=At any birthday for client
 about_us.2.content=We welcome both children and the elderly, we will not leave anyone aside.
 about_us.3.header=Share
 about_us.3.content=Every 8 trip to our barbershop gives you a 100% discount on the service.
@@ -98,7 +98,7 @@ service.list_empty=Empty list
 service.caption=Our services
 barber.tiktok=TikTok
 barber.phone=Mob. phone
-barber.age=years old
+barber.birthday=years old
 order.service=Choose service
 order.barber=Choose barber
 order.barber.option=Choose...
@@ -139,7 +139,45 @@ client.status.change=Change status
 client.status.block=Block
 client.status.unblock=Unblock
 client.status=Status
-
+admin.order.active=Active orders
+admin.order.inactive=Inactive orders
+admin.edit.haircut=Edit list of haircuts
+admin.edit.barber=Edit list of barbers
+admin.list.approved_orders=Only Approved orders
+admin.list.waiting_orders=Only Waiting orders
+admin.list.rejected_orders=Only Rejected orders
+admin.list.all_orders=All orders
+admin.no_order.status=There is no such status
+admin.caption.haircut=Haircuts
+admin.haircut.remove.th=Remove a haircut
+admin.haircut.edit.th=Edit a haircut
+admin.haircut.remove.td=remove
+admin.haircut.edit.td=Edit
+admin.haircut.add=Add new haircut
+haircut.duration.format=Must have XX:XX:XX
+haircut.name=Input a name
+haircut.price=Input any price
+haircut.duration=Input duration
+barber.start_job=Start date of work
+barber.end_job=End date of work
+barber.photo.th=Photo
+barber.photo.td=File
+admin.barber.add=Add new barber
+admin.remove.barber.th=Lay off an employee
+admin.remove.barber.td=Lay off
+admin.edit.barber.th=Edit date
+admin.edit.barber.td=Edit
+admin.barbers.active=Active barbers
+admin.barbers.dismissed=Dismissed barbers
+admin.barber.change_photo=Change photo
+field.is_important=Fill in the field
+button.submit=Submit
+review.barber_id=The barber has no reviews.You can make to write first review about him.
+review.button=View/Write a review
+review.button.send=Send review
+review=Reviews
+admin.review.remove=Remove review
+admin.review.edit=Edit review
 
 
 
