--- a/barbershop/src/main/resources/content_ru.properties
+++ b/barbershop/src/main/resources/content_ru.properties
@@ -232,7 +232,7 @@ service.list_empty=Пустой список
 service.caption=Наши услуги
 barber.tiktok=Тикток
 barber.phone=Моб. телефон
-barber.age=лет
+barber.birthday=лет
 order.service=Выберите услугу
 order.barber=Выберите барбера
 order.barber.option=Выберите...
