--- a/barbershop/src/main/resources/content_en.properties
+++ b/barbershop/src/main/resources/content_en.properties
@@ -24,20 +24,11 @@ login_page.password=Password
 login_page.password_hint=Password must contain from 8 to 20 characters
 login_page.login_button=Log In
 login_page.signup_button=Sing Up
-login_page.email_error=Email not confirmed. Confirm email to login.
 login_page.not_approved=Your request has not yet been approved by the administrator.
 login_page.blocked=Your account has been blocked by the administrator.
 error.already_logged_in=You are already logged in
 error.not_enough_rights=You do not have enough rights
-error.return_to_home=Return to homepage
-error.main_message=Oops! Something went wrong.
-error.not_found_main_message=Oops! Page not found.
-error.page_not_found_info=The page you are looking for might have been removed had its name changed or is temporarily unavailable.
-error.server_error_main_message=Oops! We had some technical problems during your last operation.
-error.server_error_info=Please try again later.
-error.email_not_confirmed.send_again=Send message again.
 error.invalid_activation_link=Your activation link is invalid
-error.email_already_confirmed=Email already confirmed
 error.invalid_request=Invalid request
 signup.message=Sign Up
 signup.passwords_mismatch=Passwords mismatch
@@ -61,13 +52,6 @@ signup.hint.name=Format: first capital letter, must consist of latin or cyrillic
 signup.have_account=Already have an account?
 signup.error.illegal_request=Error while filling out the form
 signup.error.login_not_available=This login is not available
-signup.error.email_not_available=This email is not available
-send_again_page.message=Send confirmation link
-send_again_page.btn=Send
-info.email_confirmed=Email confirmed successfully
-info.email_sent=We sent you a confirmation link
-error.invalid_login=Invalid login
-info.already_subscribed=You already have a subscription to this course
 about_us.main=About us
 about_us.message=Our advantages
 about_us.1.header=Professional Barbers
@@ -76,18 +60,12 @@ about_us.2.header=At any birthday for client
 about_us.2.content=We welcome both children and the elderly, we will not leave anyone aside.
 about_us.3.header=Share
 about_us.3.content=Every 8 trip to our barbershop gives you a 100% discount on the service.
-error.teacher_has_lessons=To deactivate a teacher, cancel their lessons
-error.teacher_has_courses=To deactivate a teacher, remove teacher from courses
 add=Add
 user.login=Login
 user.name=Name
 user.surname=Surname
 user.email=Email
 user.birthday=Birthday
-comment.comments=Comments
-comment.remove_comment=Remove
-comment.content=Content
-comment.not_found=No comments found
 error.cant_deactivate_yourself=You can't deactivate yourself
 service.th.name=Service
 service.th.time=Duration
@@ -125,11 +103,8 @@ client.edit.order=Edit order
 client.remove.order=Remove order
 client.remove.td=Remove
 client.edit.td=Edit
-client.edit.link.email=You can
-admin.data=Your personal data
 admin.client.list=List of clients
 client.fio=Surname Name Patronymic
-admin.remove.client=Remove the client
 client.view.orders=View client orders
 view.orders=View orders
 admin.list.caption=All clients
@@ -142,7 +117,6 @@ client.status=Status
 admin.order.active=Active orders
 admin.order.inactive=Inactive orders
 admin.edit.haircut=Edit list of haircuts
-admin.edit.barber=Edit list of barbers
 admin.list.approved_orders=Only Approved orders
 admin.list.waiting_orders=Only Waiting orders
 admin.list.rejected_orders=Only Rejected orders
@@ -161,7 +135,6 @@ haircut.duration=Input duration
 barber.start_job=Start date of work
 barber.end_job=End date of work
 barber.photo.th=Photo
-barber.photo.td=File
 admin.barber.add=Add new barber
 admin.remove.barber.th=Lay off an employee
 admin.remove.barber.td=Lay off
@@ -178,6 +151,12 @@ review.button.send=Send review
 review=Reviews
 admin.review.remove=Remove review
 admin.review.edit=Edit review
+page.next=Next page
+page.previous=Previous page
+barbershop.email=If you have any questions or you want change your order - write us
+order.time_booked=View booked time on the day
+order.slots.booked=Booked time
+haircut.duration.th=Duration
 
 
 
